test/integration/bad/tuples/onepl_type_missing_comma.stan
model {
  tuple(real) y = (1,);
}
